Fix slider bug on iOS

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -44,7 +44,6 @@
         min-height: $hero--min-width;
 
         background-repeat: none;
-        background-attachment: fixed;
         background-position: center;
         background-size: cover;
     }
